src/components/iphonesettings/style.less
@import '../../style/helpers.less';


.settings {
  position: absolute;
  padding: 3em;
  color: #fff;
  font-family: munro;
  text-shadow: 2px 2px 0px #000;
  font-size: 1.1em;

  label {
    background: rgba(40,40,40,0.7);
    padding: 0.3em;
    margin: 0.2em 0;
    display: inline-block;
    border-radius: 5px;
  }

  button, input[type="text"] {
    font-family: munro;
    font-size: 1.2em;
    color: #fff;
    background-color: #333;
    border: 2px solid #fff;
    margin-top: 0.2em;
    text-shadow: 2px 2px 0px #000;

  }

  input[type="text"] {
    padding: 0.1em 0.3em;
    text-align: center;
    padding-right: 30px;
  }

  button {
    padding: 0.35em 1em;
    margin-top: 2em;
  }

}

.locationWrapper {
  position: relative;
}

.geolocate {

    width: 35px;
    height: 30px;
    position: absolute;
    top: 0.25em;
    right: 0;
    border-left: 2px solid #fff;
    padding: 5px 5px;

    :hover path {
      fill: #fff;
    }

  svg {
    width: 22px;
    height: 22px;
    display: block;
    path {
      fill: #aaa;

    }
  }
}

.currentError {
  background: rgba(255, 0, 0, 0.8);
  border: 2px solid white;
  margin-bottom: 1em;
  padding: 0.5em 1em;
  display: inline-block;
}
//using p as a work-around, as cannot select PREVIOUS child - select every input that is after p
label > p + input {
  visibility: hidden; //hide radio button
  position: absolute;
}
//select every img that is after input
label > input + img{
  height : 50px;
  width : 50px;
  cursor:pointer;
  border:2px solid transparent;
}
//select every img that is after checked input
label > input:checked + img{
  border:2px solid #fff;
}
//hiding p elements
p {
  margin : 0px;
}

